logs/dirindexer.log
Listing '.'...
Listing './bin'...
Compiling './bin/dirindexer.py'...
***   File "./bin/dirindexer.py", line 149
    print dir_nm
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DirIndexer-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Whoosh-2.7.4.dist-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/whoosh'...
Listing './lib/python3.5/site-packages/whoosh/analysis'...
Listing './lib/python3.5/site-packages/whoosh/automata'...
Listing './lib/python3.5/site-packages/whoosh/codec'...
Listing './lib/python3.5/site-packages/whoosh/filedb'...
Listing './lib/python3.5/site-packages/whoosh/lang'...
Listing './lib/python3.5/site-packages/whoosh/lang/snowball'...
Listing './lib/python3.5/site-packages/whoosh/matching'...
Listing './lib/python3.5/site-packages/whoosh/qparser'...
Listing './lib/python3.5/site-packages/whoosh/query'...
Listing './lib/python3.5/site-packages/whoosh/support'...
Listing './lib/python3.5/site-packages/whoosh/util'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
